fix(site): avoid navigation buttons wrapping

--- a/src/site/components/Navigation/Navigation.module.css
+++ b/src/site/components/Navigation/Navigation.module.css
@@ -37,7 +37,7 @@
   color: var(--color-text-selected-hover);
 }
 
-@media only screen and (min-width: 555px) {
+@media only screen and (min-width: 596px) {
   .menu {
     display: none;
   }
